fixed issue where posts overlapped view profile

--- a/p2-frontend/src/app/components/view-profile/view-profile.component.css
+++ b/p2-frontend/src/app/components/view-profile/view-profile.component.css
@@ -1,7 +1,6 @@
 :host {
   position: fixed;
   top: 0;
-  z-index: 999;
   display: flex;
   flex-direction: column;
   align-items: center;
