--- a/p2-frontend/src/app/pages/bookmarks-page/bookmarks-page.component.css
+++ b/p2-frontend/src/app/pages/bookmarks-page/bookmarks-page.component.css
@@ -1,31 +1,32 @@
 :host {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 1.6rem;
-  }
-  header{
-    top: 2rem;
-    padding: 1.2rem;
-    border-radius: 1.5rem;
-    background-color: rgba(255,255,255,0.3);
-    position:fixed;
-    height: 9rem;
-  }
-  .post-feed {
-    display: flex;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1.6rem;
+}
+.title {
+  z-index: -1;
+}
+
+header {
+  top: 2rem;
+  padding: 1.2rem;
+  border-radius: 1.5rem;
+  background-color: var(--component-bg);
+  height: 9rem;
+}
+.post-feed {
+  display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  }
-  
-  .post-form {
-    position: fixed;
-    right: 1.6rem;
-  }
-  
-  .feed-container{
-    top: 11rem;
-    position: absolute;
-    overflow: auto;
-  }
+}
+
+.post-form {
+  position: fixed;
+  right: 1.6rem;
+}
+
+.feed-container {
+  overflow: auto;
+}
