--- a/p2-frontend/src/app/pages/user-feed/user-feed.component.css
+++ b/p2-frontend/src/app/pages/user-feed/user-feed.component.css
@@ -30,7 +30,6 @@ header {
 }
 .feed-container {
   top: 11rem;
-  position: absolute;
   overflow: auto;
   /* bottom: 0;
   left: 0;
